# p2py_chat

./: README.md  pyproject.toml
src/: main.py
src/ISocket/: ISocket.py
