[tool.poetry]
name = "p2py-chat"
version = "0.1.0"
description = "Simple peer-to-peer chat application built with Python using asyncio for asynchronous network communication."
authors = ["ci-c <wblmmn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
